# perplexity_api_client

./: Cargo.toml  README.md  log.txt
.github/workflows/: ci.yaml
api/: Cargo.toml
api/src/: perplexity.rs
src/: main.rs
